--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,7 @@
         
         <p class="footer">
             For blackjack rules please visit <a href="http://www.hitorstand.net/strategy.php" target="_blank">this page.</a><br><br>
-            This is BlackJack Extreme - by Brandon Kim
+            This is BlackJack Extreme - by Brandon Kim and Shinakrit Phanutaiwat
         </p>
 
     </body>
